--- a/my-first-webpage.css
+++ b/my-first-webpage.css
@@ -1,4 +1,18 @@
 h1{
-    color:blue
-    text-align:center
+    color:#00f;
+    text-align:center;
+}
+h2{
+    color:green;
+    font-style:italic;
+    text-align:center;
+}
+p{
+    font-family:sans-serif;
+  
+
+}
+ul{
+    line-height: 40px;
+
 }
